src/App.css
html { 
    background: url('/pipeline.jpg') no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    max-width: 90%;
    overflow: hidden;
}

.title {
    font-size: 50px;
    /* font-family: Inter var,sans-serif; */
    font-family: 'Segoe UI', Tahoma, sans-serif, sans-serif;
    color: rgb(255,255,255);
    max-width: 90%;
}

.subtitle {
    font-size: 40px;
    font-family: 'Segoe UI', Tahoma, sans-serif, sans-serif;
    color: rgb(255,255,255);
    margin: auto;
}

.mini {
    font-size: 20px;
    font-family: 'Segoe UI', Tahoma, sans-serif, sans-serif;
    color: rgb(255,255,255);
    left: 50px;
    bottom:30%;
    position: fixed;
    max-width: 100%;
    /* outline-style: solid; 
    outline-color: #FCC676; */
}

.chevron {
    position: fixed;
    right: 7%;
    top: 40%;
    color: rgb(255,255,255);
	border-style: solid;
	border-width: 0.25em 0.25em 0 0;
	content: '';
	display: inline-block;
	height: 1.80em;
	transform: rotate(-45deg);
	width: 1.80em;
}

.chevron.down{
    margin-top: 7%;
    transform: rotate(135deg);
}

.mover {
    font-size: 21px;
    font-family: 'Segoe UI', Tahoma, sans-serif, sans-serif;
    color: rgb(255,255,255);
    margin-top: 25px;
    transition: color 1.5s;
}

.movers {
    position: fixed;
    margin-top: 50px;
    margin-left: 750px;
    text-align: left;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    white-space: nowrap;
}

.icon {
    height: 30px;
    width: 30px;
    padding-top: 10px;
    padding-right: 10px;
}

.bigListItem {
    font-size: 30px;
    font-family: 'Segoe UI', Tahoma, sans-serif, sans-serif;
    color: rgb(255,255,255);
    padding-top: 15px;
    padding-bottom: 10px;
    margin: auto;
}

.content {
    position: absolute;
    width: 650px;
    padding-left: 30px;
    max-width: 90%;
}

.listItem {
    font-size: 20px;
    font-family: 'Segoe UI', Tahoma, sans-serif, sans-serif;
    color: rgb(255,255,255);
    padding-top: 5px;
    margin: auto;
}

.currmover {
    font-size: 21px;
    font-family: 'Segoe UI', Tahoma, sans-serif, sans-serif;
    color: rgb(252, 198, 118);
    padding-top: 25px;
    cursor: default;
}

.mover:hover {
    font-weight: 530; 
    position: relative;  
    right: -4px; 
    transition-duration: 1.5s;
    color: #FCC676;
}

